objects/AcctSeedERP__Shipment_Line__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Product__c</fullName>
        <formula>AcctSeedERP__Sales_Order_Line__r.AcctSeedERP__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Shipped__c</fullName>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Sales_Order_Line__c</fullName>
        <label>Sales Order Line</label>
        <referenceTo>AcctSeedERP__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Sales_Order__c</fullName>
        <formula>AcctSeedERP__Shipment__r.AcctSeedERP__Sales_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Serialized__c</fullName>
        <formula>IF(AcctSeedERP__Sales_Order_Line__r.AcctSeedERP__Product__r.AcctSeedERP__Serialized__c =True,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serialized</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>AcctSeedERP__Shipment__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Shipment Line</label>
    <nameField>
        <displayFormat>SPL-{00000}</displayFormat>
        <label>Shipment Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeedERP__Quantity_Shipped_Is_Positive</fullName>
        <active>true</active>
        <description>quantity must be greater than or equal to 0</description>
        <errorConditionFormula>AcctSeedERP__Quantity_Shipped__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Quantity_Shipped__c</errorDisplayField>
        <errorMessage>quantity must be greater than or equal to 0</errorMessage>
    </validationRules>
</CustomObject>